objects/Screening_Interview__c.object
<CustomObject>
    <fields>
        <fullName>Positions_All_3__c</fullName>
        <description>Customer Service Manager, A/P, A/R, Accounting Assistant, Accounting Manager, Analyst, Bookkeeper, Controller, Finance Manager, Financial Analyst, Fund Accountant, Payroll Assistant, &amp; Payroll Manager</description>
        <formula>IF(INCLUDES(Positions_1__c,&quot;Customer Service Manager&quot;), &quot;Customer Service Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Customer Service Manager&quot;), &quot;Customer Service Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Customer Service Manager&quot;), &quot;Customer Service Manager, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;A/P&quot;), &quot;A/P, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;A/P&quot;), &quot;A/P, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;A/P&quot;), &quot;A/P, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;A/R&quot;), &quot;A/R, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;A/R&quot;), &quot;A/R, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;A/R&quot;), &quot;A/R, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Accounting Assistant&quot;), &quot;Accounting Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Accounting Assistant&quot;), &quot;Accounting Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Accounting Assistant&quot;), &quot;Accounting Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Accounting Manager&quot;), &quot;Accounting Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Accounting Manager&quot;), &quot;Accounting Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Accounting Manager&quot;), &quot;Accounting Manager, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Analyst&quot;), &quot;Analyst, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Analyst&quot;), &quot;Analyst, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Analyst&quot;), &quot;Analyst, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Bookkeeper&quot;), &quot;Bookkeeper, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Bookkeeper&quot;), &quot;Bookkeeper, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Bookkeeper&quot;), &quot;Bookkeeper, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Controller&quot;), &quot;Controller, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Controller&quot;), &quot;Controller, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Controller&quot;), &quot;Controller, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Finance Manager&quot;), &quot;Finance Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Finance Manager&quot;), &quot;Finance Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Finance Manager&quot;), &quot;Finance Manager, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Financial Analyst&quot;), &quot;Financial Analyst, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Financial Analyst&quot;), &quot;Financial Analyst, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Financial Analyst&quot;), &quot;Financial Analyst, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Fund Accountant&quot;), &quot;Fund Accountant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Fund Accountant&quot;), &quot;Fund Accountant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Fund Accountant&quot;), &quot;Fund Accountant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Payroll Assistant&quot;), &quot;Payroll Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Payroll Assistant&quot;), &quot;Payroll Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Payroll Assistant&quot;), &quot;Payroll Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Payroll Manager&quot;), &quot;Payroll Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Payroll Manager&quot;), &quot;Payroll Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Payroll Manager&quot;), &quot;Payroll Manager, &quot;, &quot;&quot;)</formula>
        <label>Positions All 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_All__c</fullName>
        <label>Positions - All</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Technology/Hardware</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing Solutions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <inlineHelpText>Rate the candidate&apos;s professionalism, polish, and presentation.</inlineHelpText>
        <label>Professionalism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quota_Achieved__c</fullName>
        <label>Quota Achieved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rank_on_team__c</fullName>
        <label>Rank on team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>Top 1%</fullName>
                </value>
                <value>
                    <fullName>Top 10%</fullName>
                </value>
                <value>
                    <fullName>Top 25%</fullName>
                </value>
                <value>
                    <fullName>Top 50%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>((
IF ( ISPICKVAL( Communication__c , &quot;0&quot;), 0, 
IF ( ISPICKVAL( Communication__c , &quot;1&quot;), 1, 
IF ( ISPICKVAL( Communication__c , &quot;2&quot;), 2, 
IF ( ISPICKVAL( Communication__c , &quot;3&quot;), 3, 0))))
+
IF ( ISPICKVAL(  Experience__c  , &quot;0&quot;), 0, 
IF ( ISPICKVAL(  Experience__c  , &quot;1&quot;), 1, 
IF ( ISPICKVAL(  Experience__c  , &quot;2&quot;), 2, 
IF ( ISPICKVAL(  Experience__c  , &quot;3&quot;), 3, 0))))
+
IF ( ISPICKVAL(  Professionalism__c   , &quot;0&quot;), 0, 
IF ( ISPICKVAL(  Professionalism__c   , &quot;1&quot;), 1, 
IF ( ISPICKVAL(  Professionalism__c   , &quot;2&quot;), 2, 
IF ( ISPICKVAL(  Professionalism__c   , &quot;3&quot;), 3, 0))))
)
 / 3)</formula>
        <inlineHelpText>Shows the composite of the three ratings for Communication, Experience, and Polish</inlineHelpText>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruiting_Role__c</fullName>
        <formula>Owner__r.Recruiting_Role__c</formula>
        <label>Recruiting Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resignation_Notice__c</fullName>
        <formula>TEXT(Candidate__r.Resignation_Notice__c)</formula>
        <label>Resignation Notice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Cycle__c</fullName>
        <label>Sales Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-2 weeks</fullName>
                </value>
                <value>
                    <fullName>2-4 weeks</fullName>
                </value>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-9 months</fullName>
                </value>
                <value>
                    <fullName>9-12 months</fullName>
                </value>
                <value>
                    <fullName>1 year +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person_Type__c</fullName>
        <label>Sales Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Player/Coach</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Part-Time Only</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Last Minute Need</fullName>
                </value>
                <value>
                    <fullName>Holidays</fullName>
                </value>
                <value>
                    <fullName>Nights</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_of_Sales_Team__c</fullName>
        <label>Size of Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-5</fullName>
                </value>
                <value>
                    <fullName>5-10</fullName>
                </value>
                <value>
                    <fullName>10-20</fullName>
                </value>
                <value>
                    <fullName>20+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Skills__c</fullName>
        <label>Software Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>AutoCAD</fullName>
                </value>
                <value>
                    <fullName>Autodesk</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Constant Contact</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>FileMaker</fullName>
                </value>
                <value>
                    <fullName>Google Analytics</fullName>
                </value>
                <value>
                    <fullName>Google Applications</fullName>
                </value>
                <value>
                    <fullName>Greenhouse</fullName>
                </value>
                <value>
                    <fullName>HootSuite</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>Illustrator</fullName>
                </value>
                <value>
                    <fullName>InDesign</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Jobvite</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Mac OS X</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>MS Word</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>Photoshop</fullName>
                </value>
                <value>
                    <fullName>PowerPoint</fullName>
                </value>
                <value>
                    <fullName>Proprietary ATS</fullName>
                </value>
                <value>
                    <fullName>Proprietary CRM</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>Quickbooks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Lead</fullName>
                </value>
                <value>
                    <fullName>Passed On</fullName>
                </value>
                <value>
                    <fullName>Called to Interview</fullName>
                </value>
                <value>
                    <fullName>Prescreened</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported__c</fullName>
        <label>Supported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Resume__c</fullName>
        <label>Text Resume</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_5_Qualities__c</fullName>
        <label>Top 5 Qualities</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_Skills__c</fullName>
        <label>Top Skills</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <label>Total Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-49</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100-500</fullName>
                </value>
                <value>
                    <fullName>500-1000</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_to_Paylocity__c</fullName>
        <label>Upload to Paylocity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_are_you_calling_in_to__c</fullName>
        <label>Who are you calling in to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Copy__c</fullName>
        <inlineHelpText>Template:

Responsibilities:
++:
--:
Software Skills:
RFL:</inlineHelpText>
        <label>Working Copy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Record_Type_ID__c</fullName>
        <formula>RecordType.Id</formula>
        <label>18 Digit Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>2-5</fullName>
                </value>
                <value>
                    <fullName>5-10</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Screening Interview</label>
    <nameField>
        <displayFormat>SI{000000}</displayFormat>
        <label>Interview#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screening Interviews</pluralLabel>
    <recordTypes>
        <fullName>Administrative</fullName>
        <active>true</active>
        <description>Admin Team Screening Interview</description>
        <label>Administrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Temp</fullName>
        <active>true</active>
        <description>Contract/Temp Screening Interview</description>
        <label>Contract/Temp</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSI</fullName>
        <active>true</active>
        <description>Internal Screening Interview</description>
        <label>PSI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>false</active>
        <description>Sales Team Screening Interview</description>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <description>SFDC Testing</description>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CT_Min_Salary_and_Hourly_Required</fullName>
        <active>false</active>
        <description>When Division is CT Min Salary and Min Hourly are Required</description>
        <errorConditionFormula>(ISPICKVAL( Division__c ,&quot;CT&quot;) &amp;&amp;  (ISBLANK( Minimum_Salary__c ) ||  ISBLANK( Minimum_Hourly__c )))</errorConditionFormula>
        <errorMessage>Must Enter Minimum Salary or Minimum Hourly to Save Record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Categories</fullName>
        <active>false</active>
        <description>Requires categories be filled out to save Screening Interview</description>
        <errorConditionFormula>ISNULL(Categories__c) &amp;&amp;
(
(ISPICKVAL(Status__c, &quot;Available&quot;)) ||
(ISPICKVAL(Status__c, &quot;Passive&quot;))
)</errorConditionFormula>
        <errorDisplayField>Categories__c</errorDisplayField>
        <errorMessage>Must select categories to save record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Fields_if_Status_is_Avail_Admin</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.Id  = &quot;01240000000Ue1I&quot;)
&amp;&amp;
ISPICKVAL( Status__c , &quot;Available&quot;) 
&amp;&amp;
(
ISBLANK(Personality_Profile__c    )
||
ISPICKVAL(Category_1__c, &quot;&quot;) 
||
INCLUDES( Positions_1__c, &quot;&quot; ) 
)</errorConditionFormula>
        <errorMessage>You must fill out:
- Category (at least 1) 
- Positions (at least 1)
- Personality Profile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Fields_if_Status_is_Avail_Sales</fullName>
        <active>false</active>
        <errorConditionFormula>(RecordType.Id  = &quot;01240000000Ue1D&quot;)
&amp;&amp;
ISPICKVAL( Status__c , &quot;Available&quot;) 
&amp;&amp;
(
ISNULL(  Quota__c  )
|| 
ISNULL(   Desired_OTE__c   )
||
ISNULL(    Current_OTE__c    )
||
ISNULL(     Desired_Salary__c     ) 
||
ISPICKVAL( Average_Deal_Size__c , &quot;&quot;)
||
ISPICKVAL( Rank_on_team__c , &quot;&quot;)
||
ISPICKVAL(Communication__c, &quot;&quot;) 
|| 
ISPICKVAL(Experience__c, &quot;&quot;) 
|| 
ISPICKVAL(Professionalism__c, &quot;&quot;) 
|| 
ISNULL(    Current_Salary__c     ) 
|| 
ISPICKVAL( Quota_Achieved__c , &quot;&quot;) 
||
INCLUDES( Who_are_you_calling_in_to__c , &quot;&quot;) 
)</errorConditionFormula>
        <errorMessage>You must fill out:
​- ​Average deal size
​- ​Quota
​- ​Rank on team
​- ​Who are they calling in to?
- Current Base
​- ​Current OTE
- Desired Salary
​- ​Desired OTE
- Rating</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Fields_if_Status_is_Available_CT</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.Id  = &quot;01240000000Ue1N&quot;)
&amp;&amp;
ISPICKVAL( Status__c , &quot;Available&quot;) 
&amp;&amp;
(
ISNULL( Minimum_Hourly__c ) 
||
ISPICKVAL( Category_1__c, &quot;&quot; )
||
ISBLANK(Personality_Profile__c)
||
ISPICKVAL(Communication__c, &quot;&quot;) 
||
ISPICKVAL(Experience__c, &quot;&quot;)
||
ISPICKVAL(Professionalism__c, &quot;&quot;)
||
INCLUDES( Positions_1__c, &quot;&quot; )
)</errorConditionFormula>
        <errorMessage>You must fill out:
- Min Hourly
- Personality Profile
- Category (at least 1)
- Positions (at least 1)
- Rating</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Rating</fullName>
        <active>false</active>
        <description>Requires Communication, Experience, and Professionalism to be filled out to save a Screening Interview if the SI status is Available or Passive.</description>
        <errorConditionFormula>(
(ISPICKVAL(Status__c, &quot;Available&quot;)) || 
(ISPICKVAL(Status__c, &quot;Passive&quot;))
)
&amp;&amp; 
(
(ISPICKVAL(Communication__c , &quot;&quot;)) || 
(ISPICKVAL( Experience__c  , &quot;&quot;)) || 
(ISPICKVAL( Professionalism__c  , &quot;&quot;))
)</errorConditionFormula>
        <errorDisplayField>Professionalism__c</errorDisplayField>
        <errorMessage>Must enter Communication, Experience, and Professionalism to rate candidate before saving record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Upload_to_Paylocity</fullName>
        <active>false</active>
        <errorConditionFormula>(RecordType.Name = &quot;Contract/Temp&quot;) 
&amp;&amp;
(
ISPICKVAL(Status__c, &quot;Called to Interview&quot;) ||
ISPICKVAL(Status__c, &quot;Available&quot;) ||
ISPICKVAL(Status__c, &quot;Passive&quot;)
)
&amp;&amp;
ISPICKVAL(Upload_to_Paylocity__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Upload_to_Paylocity__c</errorDisplayField>
        <errorMessage>You need to select whether you want to upload this candidate to payroll or not.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_current_OTE</fullName>
        <active>false</active>
        <description>Requires Current OTE on Sales Screening Interviews</description>
        <errorConditionFormula>(
(RecordType.Id = &quot;01240000000Ue1D&quot;)&amp;&amp;
(
(ISPICKVAL(Status__c, &quot;Available&quot;)) ||
(ISPICKVAL(Status__c, &quot;Passive&quot;))
)
&amp;&amp;(ISNULL( Current_OTE__c ))
)</errorConditionFormula>
        <errorDisplayField>Current_OTE__c</errorDisplayField>
        <errorMessage>Must enter Current OTE to save record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_desired_OTE</fullName>
        <active>false</active>
        <description>Requires Desired OTE field on Sales SI</description>
        <errorConditionFormula>(
(RecordType.Id = &quot;01240000000Ue1D&quot;)&amp;&amp;
(
(ISPICKVAL(Status__c, &quot;Available&quot;)) ||
(ISPICKVAL(Status__c, &quot;Passive&quot;))
)
&amp;&amp;(ISNULL( Desired_OTE__c ))
)</errorConditionFormula>
        <errorDisplayField>Desired_OTE__c</errorDisplayField>
        <errorMessage>You must enter desired OTE to save record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_desired_hourly</fullName>
        <active>false</active>
        <description>Requires desired hourly field on CT layout</description>
        <errorConditionFormula>(
(RecordType.Id = &quot;01240000000Ue1N&quot;)&amp;&amp;
(
(ISPICKVAL(Status__c, &quot;Available&quot;)) ||
(ISPICKVAL(Status__c, &quot;Passive&quot;))
)
&amp;&amp;(ISNULL( Desired_Hourly__c ))
)</errorConditionFormula>
        <errorDisplayField>Desired_Hourly__c</errorDisplayField>
        <errorMessage>You must enter desired hourly to save record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_min_hourly</fullName>
        <active>false</active>
        <description>Requires minimum hourly field on CT layout</description>
        <errorConditionFormula>(
(RecordType.Id = &quot;01240000000Ue1N&quot;)&amp;&amp;
(
(ISPICKVAL(Status__c, &quot;Available&quot;)) ||
(ISPICKVAL(Status__c, &quot;Passive&quot;))
)
&amp;&amp;(ISNULL(Minimum_Hourly__c))
)</errorConditionFormula>
        <errorDisplayField>Minimum_Hourly__c</errorDisplayField>
        <errorMessage>You must enter minimum hourly to save record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_or_Admin_Min_Salary_Required</fullName>
        <active>false</active>
        <description>When Division is Sales or Admin Min Salary is Requried</description>
        <errorConditionFormula>(ISPICKVAL( Division__c ,&quot;Sales&quot;) || ISPICKVAL( Division__c ,&quot;Admin&quot;))&amp;&amp; (ISBLANK( Minimum_Salary__c ))</errorConditionFormula>
        <errorMessage>Must Enter Minimum Salary to Save Record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Years_of_Experience</fullName>
        <active>false</active>
        <description>Require field: Years of Experience</description>
        <errorConditionFormula>(
(RecordType.Id  = &quot;01240000000Ue1D&quot;) &amp;&amp; 

(ISPICKVAL(Years_of_Experience__c, &quot;&quot;) &amp;&amp; 

(
(ISPICKVAL(Status__c, &quot;Available&quot;)) || 
(ISPICKVAL(Status__c, &quot;Unavailable&quot;)) || 
(ISPICKVAL(Status__c, &quot;Passive&quot;))
)
)
)</errorConditionFormula>
        <errorDisplayField>Years_of_Experience__c</errorDisplayField>
        <errorMessage>Must enter years of experience to save record</errorMessage>
    </validationRules>
</CustomObject>